--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,42 +710,10 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-s8iEe3q8hN {
-  padding-top: 105px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-s8iEe3q8hN .icons-media-container {
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding-top: 4rem;
-}
-.cid-s8iEe3q8hN .icons-media-container .mbr-iconfont {
-  font-size: 96px;
-  color: #ffffff;
-}
-.cid-s8iEe3q8hN .icons-media-container .icon-block {
-  padding-bottom: 1rem;
-}
-.cid-s8iEe3q8hN .mbr-text {
-  color: #ffffff;
-}
-.cid-s8iEe3q8hN .card {
-  padding-bottom: 1.5rem;
-}
-.cid-s8iEe3q8hN .mbr-text,
-.cid-s8iEe3q8hN .mbr-section-btn {
-  color: #ff3366;
-}
 .cid-s7xj9Qi95q {
   padding-top: 120px;
   padding-bottom: 15px;
-  background-color: #073b4c;
+  background-image: url("../../../assets/images/mbr-1920x1280.jpg");
 }
 .cid-s87EbTssqb {
   padding-top: 30px;
@@ -818,8 +786,52 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-s8zXJ3QtoR {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-s8zXJ3QtoR .image-block {
+  margin: auto;
+}
+.cid-s8zXJ3QtoR figcaption {
+  position: relative;
+}
+.cid-s8zXJ3QtoR figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s8zXJ3QtoR .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s8zYp9rMzd {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #5b686b;
+}
+.cid-s8zYp9rMzd .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s8zYp9rMzd .section-text {
+  padding: 2rem 0;
+}
+.cid-s8zYp9rMzd .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s8zYp9rMzd .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-s7xjcHAkZ2 {
-  padding-top: 45px;
+  padding-top: 15px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
@@ -967,11 +979,6 @@ section.lazy-placeholder:after {
 }
 .cid-s87vdcVaQS H5 {
   color: #efefef;
-}
-.cid-s8ic2P8SGw {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
 }
 .cid-s8zQNt38oY .navbar {
   padding: .5rem 0;
@@ -1477,74 +1484,6 @@ section.lazy-placeholder:after {
 .cid-s88u97wzdr H2 {
   color: #efefef;
 }
-.cid-s87qFr6Ne1 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #465052;
-}
-@media (max-width: 767px) {
-  .cid-s87qFr6Ne1 .content {
-    text-align: center;
-  }
-  .cid-s87qFr6Ne1 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-s87qFr6Ne1 .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-s87qFr6Ne1 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-s87qFr6Ne1 .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-s87qFr6Ne1 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-s87qFr6Ne1 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-s87qFr6Ne1 .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-}
-.cid-s87qFr6Ne1 .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-s87qFr6Ne1 .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-s87qFr6Ne1 .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-s87qFr6Ne1 .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-s87qFr6Ne1 .footer-lower .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
 .cid-s8zQNt38oY .navbar {
   padding: .5rem 0;
   background: #ffffff;
@@ -1933,6 +1872,83 @@ section.lazy-placeholder:after {
 .cid-s8zQNt38oY .nav-link:hover,
 .cid-s8zQNt38oY .dropdown-item:hover {
   color: #cc2952 !important;
+}
+.cid-s8A8DJo9ea {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #465052;
+}
+@media (max-width: 767px) {
+  .cid-s8A8DJo9ea .content {
+    text-align: center;
+  }
+  .cid-s8A8DJo9ea .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s8A8DJo9ea .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-s8A8DJo9ea .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-s8A8DJo9ea .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-s8A8DJo9ea .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s8A8DJo9ea .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s8A8DJo9ea .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-s8A8DJo9ea .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s8A8DJo9ea .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s8A8DJo9ea .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s8A8DJo9ea .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s8A8DJo9ea .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-s8A8DJo9ea P {
+  color: #efefef;
+}
+.cid-s8A8DJo9ea .copyright > p {
+  color: #efefef;
+}
+.cid-s8A8DJo9ea H5 {
+  color: #efefef;
 }
 .cid-s8zQNt38oY .navbar {
   padding: .5rem 0;
@@ -2541,7 +2557,7 @@ section.lazy-placeholder:after {
 .cid-s8zRnRxDtS {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background415.jpg");
+  background-image: url("../../../assets/images/background419.jpg");
 }
 .cid-s8zRnRxDtS H1 {
   color: #efefef;
@@ -2951,8 +2967,21 @@ section.lazy-placeholder:after {
 .cid-s8zQNt38oY .dropdown-item:hover {
   color: #cc2952 !important;
 }
+.cid-s8A5X16AHA {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s8A5X16AHA P {
+  color: #767676;
+}
+.cid-s8A5X16AHA .mbr-text,
+.cid-s8A5X16AHA .mbr-section-btn {
+  text-align: center;
+  color: #767676;
+}
 .cid-s88vOq4g9m {
-  padding-top: 135px;
+  padding-top: 15px;
   padding-bottom: 0px;
   background-image: url("../../../assets/images/background5.jpg");
 }
@@ -3282,14 +3311,88 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-s8A3OFMm0k {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-s8A3OFMm0k P {
+  color: #767676;
+}
+.cid-s8A3OFMm0k H1 {
+  text-align: center;
+}
 .cid-s88CN3ju5W {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
 }
 .cid-s88CN3ju5W .mbr-text,
 .cid-s88CN3ju5W blockquote {
   color: #767676;
+}
+.cid-s88CN3ju5W .mbr-text {
+  color: #767676;
+}
+.cid-s8A4sPPmYb {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-s8A4sPPmYb P {
+  color: #767676;
+}
+.cid-s8A4sPPmYb H1 {
+  text-align: center;
+}
+.cid-s8A4qdYiZR {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-s8A4qdYiZR .mbr-text,
+.cid-s8A4qdYiZR blockquote {
+  color: #767676;
+}
+.cid-s8A4qdYiZR .mbr-text {
+  color: #767676;
+}
+.cid-s8A531ULLJ {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-s8A531ULLJ .counter-container {
+  color: #767676;
+}
+.cid-s8A531ULLJ .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-s8A531ULLJ .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-s8A531ULLJ .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+  position: relative;
+}
+.cid-s8A531ULLJ .counter-container ol li:before {
+  position: absolute;
+  left: -56px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 .cid-s8zQNt38oY .navbar {
   padding: .5rem 0;
@@ -3680,10 +3783,22 @@ section.lazy-placeholder:after {
 .cid-s8zQNt38oY .dropdown-item:hover {
   color: #cc2952 !important;
 }
-.cid-s88F1GSL7p {
-  padding-top: 135px;
+.cid-s8zUacyyBo {
+  padding-top: 75px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background415.jpg");
+  background-color: #ffffff;
+}
+.cid-s8zUacyyBo P {
+  color: #767676;
+}
+.cid-s8zUacyyBo .mbr-text,
+.cid-s8zUacyyBo .mbr-section-btn {
+  text-align: center;
+}
+.cid-s88F1GSL7p {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/background419.jpg");
 }
 .cid-s88F1GSL7p H1 {
   color: #efefef;
@@ -4003,22 +4118,22 @@ section.lazy-placeholder:after {
 .cid-s88HypZyjw H1 {
   text-align: center;
 }
-.cid-s88IXO9CzN {
-  padding-top: 0px;
+.cid-s8zSYUv2kD {
+  padding-top: 15px;
   padding-bottom: 60px;
   position: relative;
-  background-color: #efefef;
+  background-color: #f9f9f9;
 }
-.cid-s88IXO9CzN .card {
+.cid-s8zSYUv2kD .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-s88IXO9CzN .card .card-header {
+.cid-s8zSYUv2kD .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-s88IXO9CzN .card .card-header a.panel-title {
+.cid-s8zSYUv2kD .card .card-header a.panel-title {
   margin-bottom: 0;
   font-style: normal;
   font-weight: 500;
@@ -4027,18 +4142,18 @@ section.lazy-placeholder:after {
   margin-top: -1px;
   line-height: normal;
 }
-.cid-s88IXO9CzN .card .card-header a.panel-title:focus {
+.cid-s8zSYUv2kD .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-s88IXO9CzN .card .card-header a.panel-title h4 {
+.cid-s8zSYUv2kD .card .card-header a.panel-title h4 {
   padding: 1.3rem 2rem;
   border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-s88IXO9CzN .card .card-header a.panel-title h4 .sign {
+.cid-s8zSYUv2kD .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-s88IXO9CzN .card .panel-body {
+.cid-s8zSYUv2kD .card .panel-body {
   color: #767676;
 }
 .cid-s88QBuo4Sn {
