--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -678,16 +678,30 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-t1oqI2Hlty {
-  padding-top: 120px;
+.cid-te11zeVEEc {
+  padding-top: 90px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: #efefef;
 }
-.cid-t1oqI2Hlty .mbr-section-subtitle {
-  color: #465052;
+.cid-te11zeVEEc .line {
+  background-color: #efefef;
+  color: #efefef;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-t1oqI2Hlty H2 {
-  color: #149dcc;
+.cid-te11zeVEEc .section-text {
+  padding: 2rem 0;
+  text-align: center;
+  color: #e70941;
+}
+.cid-te11zeVEEc .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-te11zeVEEc .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-s8SuyC79P5 .navbar {
   background: #ffffff;
